# Nft-minter

./: Anchor.toml  README.md
programs/nft_minting/: Cargo.toml
programs/nft_minting/src/: lib.rs
scripts/: createOwner.js  helper.js  key.json  mint.js  package-lock.json  package.json  updateMetadata.js  updateOwner.js
tests/: nft_minting.ts
